src/test/compile-fail/borrowck-assign-to-enum.rs
enum foo = int;

fn main() {
    let x = foo(3);
    *x = 4; //! ERROR assigning to enum content
}